--- a/public/hello.html
+++ b/public/hello.html
@@ -1,1 +1,8 @@
-<h1> Hello Motherfucking world!!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+</head>
+
+    <h1> Hello Motherfucking world!!</h1>
+
+</html>
