updated css sheets

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
 </head>
 
 <body>
+
     <h1> Web Development Spring 2016</h1>
 
-    <div id="nav">
+    <div id= "nav">
         <table id="navtable">
             <tr>
                 <td>
@@ -41,5 +42,13 @@
             </tr>
         </table>
 
+    </div>
+
+    <div id = "body">
+
+    </div>
+
+    <div id= "about">
+        <h3> this is a body </h3>
     </div>
 </body>
