updated css and added breadtrail

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
             </tr>
             <tr>
                 <td>
-                    <a href="./assingment.html"> assingment </a>
+                    <a href="./assignment.html"> Assignment </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="./project.html"> project </a>
+                    <a href="./project.html"> Project </a>
                 </td>
             </tr>
             <tr>
@@ -45,10 +45,10 @@
     </div>
 
     <div id = "body">
-
+        <h3> this is a body </h3>
     </div>
 
     <div id= "about">
-        <h3> this is a body </h3>
+        <img id="about_me" src="Pictures/about_me.jpg">
     </div>
 </body>
