--- a/public/project.html
+++ b/public/project.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href= "./project.css">
 </head>
-    <body>
-        <h1> project </h1>
-    </body>
+<body>
+
+<h1 style="align-content: center">
+    <a href="./index.html"> Back </a> Project
+</h1>
+</body>
+
+
 </html>
