fixed path issue

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="./assignment.html"> Assignment </a>
+                    <a href="./assignment1.html"> Assignment </a>
                 </td>
             </tr>
             <tr>
