added assignment html files

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href= "./index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href= "css/index.css">
 </head>
 
 <body>
@@ -17,12 +18,12 @@
             </tr>
             <tr>
                 <td>
-                    <a href="./assignment1.html"> Assignment </a>
+                    <a href="assignment/home.html"> Assignment </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="./project.html"> Project </a>
+                    <a href="project/project.html"> Project </a>
                 </td>
             </tr>
             <tr>
