added to html files

--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../Downloads/bootstrap-3.3.6/docs/favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Form Maker</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -62,11 +62,11 @@
                 <li class="active"><a href="./forms.html">Forms</a></li>
             </ul>
         </div>
-        <ul class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Forms</h1>
 
         <ul class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="./forms">Forms</a></li>
+            <li role="presentation" class="active"><a href="./forms.html">Forms</a></li>
             <li role="presentation"><a href="./form-fields.html">fields</a></li>
 
         </ul>
@@ -140,6 +140,7 @@
 
                     </tbody>
                 </table>
+                </div>
             </div>
         </div>
     </div>
