--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../Downloads/bootstrap-3.3.6/docs/favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Form Maker</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
