finished all html for assignment 1

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-<nav class="navbar Header">
-    <div class="container-fluid">
+<nav id="header" class="navbar navbar-fixed-top">
+    <div class="container-fluid" >
         <div class="navbar-header">
-            <strong>Web Development Spring 2016</strong>
+            <Strong>Web Development Spring 2016</Strong>
         </div>
     </div>
 </nav>
@@ -24,10 +24,11 @@
            <li><a href="./hello.html"> Hello </a></li>
            <li><a href="assignment/home.html"> Assignment </a></li>
            <li><a href="project/project.html"> Project </a></li>
-           <li><a href="./hello.html"> link 4 </a></li>
-        </ul>
 
+        </ul>
     </div>
+
+
 
     <div id = "body" class="container col-xs-16 col-sm-8">
         <h3> this is a body </h3>
@@ -39,7 +40,7 @@
         </div>
     </div>
 
-    <div id="about" class="container col-xs-5 col-sm-2" >
+    <div id="about" class="container col-xs-4 col-sm-2" >
         <img src="Pictures/about_me.jpg" class="img-responsive img-rounded" width="825" height="825">
     </div>
 </body>
