--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -102,104 +102,9 @@
                 <div class="row">
                     <div class="col-xs-6 col-sm-3">
                         <div class="dropdown">
-                            Date Of Birth:
+                            Gender:
                             <br>
-
-                            <button class="btn btn-xs dropdown-toggle" type="button" id="MonthDropdown"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                    Month
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="MonthDropdown">
-                                <li><a href="#">January</a></li>
-                                <li><a href="#">February</a></li>
-                                <li><a href="#">March</a></li>
-                                <li><a href="#">April</a></li>
-                                <li><a href="#">May</a></li>
-                                <li><a href="#">June</a></li>
-                                <li><a href="#">July</a></li>
-                                <li><a href="#">August</a></li>
-                                <li><a href="#">September</a></li>
-                                <li><a href="#">October</a></li>
-                                <li><a href="#">November</a></li>
-                                <li><a href="#">December</a></li>
-                            </ul>
-                            <button class="btn btn-xs dropdown-toggle" type="button" id="DayDropdown"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                Day
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="DayDropdown">
-                                <li><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li><a href="#">6</a></li>
-                                <li><a href="#">7</a></li>
-                                <li><a href="#">8</a></li>
-                                <li><a href="#">9</a></li>
-                                <li><a href="#">10</a></li>
-                                <li><a href="#">11</a></li>
-                                <li><a href="#">12</a></li>
-                                <li><a href="#">13</a></li>
-                                <li><a href="#">14</a></li>
-                                <li><a href="#">15</a></li>
-                                <li><a href="#">16</a></li>
-                                <li><a href="#">17</a></li>
-                                <li><a href="#">18</a></li>
-                                <li><a href="#">19</a></li>
-                                <li><a href="#">20</a></li>
-                                <li><a href="#">21</a></li>
-                                <li><a href="#">22</a></li>
-                                <li><a href="#">23</a></li>
-                                <li><a href="#">24</a></li>
-                                <li><a href="#">25</a></li>
-                                <li><a href="#">26</a></li>
-                                <li><a href="#">27</a></li>
-                                <li><a href="#">28</a></li>
-                                <li><a href="#">29</a></li>
-                                <li><a href="#">30</a></li>
-                                <li><a href="#">31</a></li>
-                            </ul>
-                            <button class="btn btn-xs dropdown-toggle" type="button" id="YearDropdown"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                Year
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="YearDropdown">
-                                <li><a href="#">1986</a></li>
-                                <li><a href="#">1987</a></li>
-                                <li><a href="#">1988</a></li>
-                                <li><a href="#">1989</a></li>
-                                <li><a href="#">1990</a></li>
-                                <li><a href="#">1991</a></li>
-                                <li><a href="#">1992</a></li>
-                                <li><a href="#">1993</a></li>
-                                <li><a href="#">1994</a></li>
-                                <li><a href="#">1995</a></li>
-                                <li><a href="#">1996</a></li>
-                                <li><a href="#">1997</a></li>
-                                <li><a href="#">1998</a></li>
-                                <li><a href="#">1999</a></li>
-                                <li><a href="#">2000</a></li>
-                                <li><a href="#">2001</a></li>
-                                <li><a href="#">2002</a></li>
-                                <li><a href="#">2003</a></li>
-                                <li><a href="#">2004</a></li>
-                                <li><a href="#">2005</a></li>
-                                <li><a href="#">2006</a></li>
-                                <li><a href="#">2007</a></li>
-                                <li><a href="#">2008</a></li>
-                                <li><a href="#">2009</a></li>
-                                <li><a href="#">2010</a></li>
-                                <li><a href="#">2011</a></li>
-                                <li><a href="#">2012</a></li>
-                                <li><a href="#">2013</a></li>
-                                <li><a href="#">2014</a></li>
-                                <li><a href="#">2015</a></li>
-                                <li><a href="#">2016</a></li>
-                            </ul>
+                            <input type="date">
                         </div>
                     </div>
                     <div class="col-xs-offset-2 col-sm-offset-1 col-xs-6 col-sm-3">
@@ -227,6 +132,54 @@
                                 <li><a href="#">Other</a></li>
                             </ul>
                         </div>
+                    </div>
+                    <div class="col-xs-offset-2 col-sm-offset-1 col-xs-6 col-sm-3">
+                        <br>
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3">
+                        <div class="dropdown">
+                            Role:
+                            <br>
+                                <form>
+                                    <input type="checkbox">Admin<br>
+                                    <input type="checkbox">Student<br>
+                                    <input type="checkbox">User
+                                </form>
+                        </div>
+                    </div>
+                    <div class="col-xs-offset-2 col-sm-offset-1 col-xs-6 col-sm-3">
+                        <br>
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3">
+                        <div class="dropdown">
+                            License Agreement:
+                            <br>
+                            <form>
+                                <input type="radio" name="agreement">Yes<br>
+                                <input type="radio" name="agreement">No
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-xs-offset-2 col-sm-offset-1 col-xs-6 col-sm-3">
+                        <br>
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
                     </div>
                 </div>
             </div>
