--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../Downloads/bootstrap-3.3.6/docs/favicon.ico">
+    <meta name="author" content="Richard Stoeffel">
+
 
     <title>Form Maker</title>
 
