add new field dropdown added in

--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -85,6 +85,7 @@
                         <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
                     </div>
                  </div>
+
                 <div class="row">
                     <div class="col-xs-6 col-sm-3">
                         Last Name:
@@ -99,13 +100,14 @@
                         <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
                     </div>
                 </div>
+
                 <div class="row">
                     <div class="col-xs-6 col-sm-3">
-                        <div class="dropdown">
-                            Gender:
+
+                            Date of Birth:
                             <br>
                             <input type="date">
-                        </div>
+
                     </div>
                     <div class="col-xs-offset-2 col-sm-offset-1 col-xs-6 col-sm-3">
                         <br>
@@ -118,7 +120,7 @@
 
                 <div class="row">
                     <div class="col-xs-6 col-sm-3">
-                        <div class="dropdown">
+
                             Gender:
                             <br>
                             <button class="btn btn-xs dropdown-toggle" type="button" id="SexDropdown"
@@ -131,7 +133,7 @@
                                 <li><a href="#">Female</a></li>
                                 <li><a href="#">Other</a></li>
                             </ul>
-                        </div>
+
                     </div>
                     <div class="col-xs-offset-2 col-sm-offset-1 col-xs-6 col-sm-3">
                         <br>
@@ -182,6 +184,37 @@
                         <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
                     </div>
                 </div>
+
+                <br>
+                <hr>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3">
+                        Add New Field:
+                        <br>
+                        <button class="btn btn-xs dropdown-toggle" type="button" id="addDropdown"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Single Line Text
+                            <span class="caret"></span>
+                        </button>
+
+                        <ul class="dropdown-menu" aria-labelledby="addDropdown">
+                            <li><a href="#">Sinlge Line Text</a></li>
+                            <li><a href="#">Date</a></li>
+                            <li><a href="#">Dropdown</a></li>
+                            <li><a href="#">Checkboxes</a></li>
+                            <li><a href="#">Radio buttons</a></li>
+                            <li><a href="#">Paragraph Text Field</a></li>
+                        </ul>
+
+                    </div>
+                    <div class="col-xs-offset-2 col-sm-offset-1 col-xs-6 col-sm-3">
+                        <br>
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
