--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,10 @@
 
     <div id="nav" class="container-fluid col-xs-4 col-sm-2">
         <ul class="nav nav-sidebar">
-           <li><a href="./hello.html"> Hello </a></li>
+
            <li><a href="assignment/home.html"> Assignment </a></li>
            <li><a href="project/project.html"> Project </a></li>
+            <li><a href="./project_proposal/index.html"> Project Proposal </a></li>
 
         </ul>
     </div>
