added project proposal pages

--- a/public/Project_proposal/index.html
+++ b/public/Project_proposal/index.html
@@ -10,25 +10,34 @@
 </head>
 <body>
 
-    <nav id="header" class="navbar navbar-fixed-top">
-        <div class="container-fluid" >
-            <div class="navbar-header">
-                <a href="../index.html">
-                    <strong> Web Development Spring 2016 </strong>
-                </a>
-            </div>
+<nav id="header" class="navbar navbar-fixed-top">
+    <div class="container-fluid" >
+        <div class="navbar-header">
+            <a href="../index.html">
+                <strong> Web Development Spring 2016 </strong>
+            </a>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <div>
-    <ul class="nav nav-tabs">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Menu 1</a></li>
-        <li><a href="#">Menu 2</a></li>
-        <li><a href="#">Menu 3</a></li>
-    </ul>
-    </div>
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#">Project Proposal</a></li>
+            <li><a href="./wire_frames.html">Wire Frame</a></li>
+            <li><a href="#">Menu 2</a></li>
+            <li><a href="#">Menu 3</a></li>
+        </ul>
 
+
+        <div class="frame">
+            <div class="container container-fluid frame-container">
+
+                        <iframe src="https://docs.google.com/document/d/1f9VTXY_LMnAj8UFAHhCc2nGOEW2MFM2a8itEqFBnVqY/edit?usp=sharing">
+                            <p>Your browser does not support iframes.</p>
+                        </iframe>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
