canged directory name

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
            <li><a href="assignment/home.html"> Assignment </a></li>
            <li><a href="project/project.html"> Project </a></li>
-            <li><a href="./project_proposal/index.html"> Project Proposal </a></li>
+            <li><a href="project-proposal/index.html"> Project Proposal </a></li>
 
         </ul>
     </div>
