updates to project proposal links

--- a/public/project-proposal/wire_frames.html
+++ b/public/project-proposal/wire_frames.html
@@ -24,14 +24,15 @@
     <ul class="nav nav-tabs">
         <li><a href="./index.html">Project Proposal</a></li>
         <li class="active"><a href="#">Wire Frame</a></li>
-        <li><a href="#">Menu 2</a></li>
-        <li><a href="#">Menu 3</a></li>
+        <li><a href="./diagram.html">Diagram</a></li>
+        <li><a href="./links.html">Links</a></li>
     </ul>
         <div class="frame">
             <div class="container container-fluid frame-container">
 
                 <iframe src="https://moqups.com/price47/jy5ykgEU">
-                    <p>Your browser does not support iframes.</p>
+                    <p>Your browser does not support iframes. The link is:
+                        https://moqups.com/price47/jy5ykgEU</p>
                 </iframe>
             </div>
         </div>
