--- a/public/project/project.html
+++ b/public/project/project.html
@@ -2,13 +2,22 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href= "../css/project.css">
+    <link rel="stylesheet" type="text/css" href= "./project.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+          crossorigin="anonymous">
 </head>
 <body>
 
-<h1 style="align-content: center">
-    <a href="../index.html"> Back </a> Project
-</h1>
+<nav id="header" class="navbar navbar-fixed-top">
+    <div class="container-fluid" >
+        <div class="navbar-header">
+            <a href="../index.html">
+                <strong> Web Development Spring 2016 </strong>
+            </a>
+        </div>
+    </div>
+</nav>
 </body>
 
 
