--- a/public/project-proposal/diagram.html
+++ b/public/project-proposal/diagram.html
@@ -22,9 +22,9 @@
 
     <div>
         <ul class="nav nav-tabs">
-            <li class="active"><a href="#">Project Proposal</a></li>
+            <li><a href="./index.html">Project Proposal</a></li>
             <li><a href="./wire_frames.html">Wire Frame</a></li>
-            <li><a href="./diagram.html">Diagram</a></li>
+            <li class="active"><a href="#">Diagram</a></li>
             <li><a href="./links.html">Links</a></li>
         </ul>
 
