added UML diagram link

--- a/public/project-proposal/diagram.html
+++ b/public/project-proposal/diagram.html
@@ -32,9 +32,9 @@
         <div class="frame">
             <div class="container container-fluid frame-container">
 
-                        <iframe src="https://docs.google.com/document/d/1f9VTXY_LMnAj8UFAHhCc2nGOEW2MFM2a8itEqFBnVqY/edit?usp=sharing">
+                        <iframe src="https://www.lucidchart.com/invitations/accept/e3ad0c87-63ce-4aca-b867-6c170efea39e">
                             <p>Your browser does not support iframes. The link is:
-                                https://docs.google.com/document/d/1f9VTXY_LMnAj8UFAHhCc2nGOEW2MFM2a8itEqFBnVqY/edit?usp=sharing
+                                https://www.lucidchart.com/invitations/accept/e3ad0c87-63ce-4aca-b867-6c170efea39e
                             </p>
                         </iframe>
             </div>
