--- a/public/project-proposal/links.html
+++ b/public/project-proposal/links.html
@@ -28,7 +28,7 @@
             <li class="active"><a href="#">Links</a></li>
         </ul>
 
-        <div class="container-fluid" style="margin-left:15px; margin-right:15px; .margin-top: 50px;">
+        <div class="container-fluid" style="margin-left:15px; margin-right:15px; margin-top: 50px;">
             <div class="row">
                 <div class="col-xs-offset-8 col-sm-offset-4 col-md-offset-2
                                                 col-xs-16 col-sm-8 col-md-4 button-nav">
@@ -43,10 +43,12 @@
             <div class="row">
                 <div class="col-xs-offset-8 col-sm-offset-4 col-md-offset-2
                                                 col-xs-16 col-sm-8 col-md-4 button-nav">
-                    <button type="button" class="btn btn-lg btn-block button-link">Diagram</button>
+                    <a href="https://www.lucidchart.com/invitations/accept/bfe47920-b6c8-4c5f-896d-466d6f527cbb"
+                       class="btn btn-lg btn-block button-link" role="button">UML Diagram</a>
                 </div>
                 <div class="col-xs-16 col-sm-8 col-md-4 button-nav">
-                    <button type="button" class="btn btn-lg btn-block button-link">Button 4</button>
+                    <a href="https://github.com/Price47/WebDevSpring2016"
+                       class="btn btn-lg btn-block button-link" role="button">Git Repository</a>
                 </div>
             </div>
         </div>
