Updated diagram link

--- a/public/project-proposal/diagram.html
+++ b/public/project-proposal/diagram.html
@@ -32,11 +32,10 @@
         <div class="frame">
             <div class="container container-fluid frame-container">
 
-                        <iframe src="https://www.lucidchart.com/invitations/accept/e3ad0c87-63ce-4aca-b867-6c170efea39e">
-                            <p>Your browser does not support iframes. The link is:
-                                https://www.lucidchart.com/invitations/accept/e3ad0c87-63ce-4aca-b867-6c170efea39e
-                            </p>
-                        </iframe>
+                <iframe src="https://drive.google.com/file/d/0B3uJqU31J-lINTlUM3QzQzJrWms/view?usp=sharing">
+                    <p>Your browser does not support iframes. The link is:
+                        https://moqups.com/price47/jy5ykgEU</p>
+                </iframe>
             </div>
         </div>
     </div>
