--- a/public/project-proposal/links.html
+++ b/public/project-proposal/links.html
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col-xs-offset-8 col-sm-offset-4 col-md-offset-2
                                                 col-xs-16 col-sm-8 col-md-4 button-nav">
-                    <a href="https://www.lucidchart.com/invitations/accept/bfe47920-b6c8-4c5f-896d-466d6f527cbb"
+                    <a href="https://drive.google.com/file/d/0B3uJqU31J-lINTlUM3QzQzJrWms/view?usp=sharing"
                        class="btn btn-lg btn-block button-link" role="button">UML Diagram</a>
                 </div>
                 <div class="col-xs-16 col-sm-8 col-md-4 button-nav">
