--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <div id="nav" class="container-fluid col-xs-4 col-sm-2">
         <ul class="nav nav-sidebar">
 
-           <li><a href="assignment/home.html"> Assignment </a></li>
+           <li><a href="assignment/index.html"> Assignment </a></li>
            <li><a href="project/project.html"> Project </a></li>
             <li><a href="project-proposal/index.html"> Project Proposal </a></li>
 
