--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -18,6 +18,7 @@
     <script src="views/users/register.controller.js"></script>
     <script src="views/main/main.controller.js"></script>
     <script src="services/user.service.client.js"></script>
+    <script src="services/form.service.client.js"></script>
     <meta charset="UTF-8">
     <title>Form Builder App</title>
 </head>
@@ -31,7 +32,7 @@
                 <div class="col-sm-3 col-md-2 sidebar">
                 <ng-include src="'views/sidebar/sidebar.view.html'"></ng-include>
                 </div>
-                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                <div class="col-sm-4 col-md-8 main">
                 <div ng-view></div>
                 </div>
             </div>
