POC components started

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
            <li><a href="assignment/index.html"> Assignment </a></li>
            <li><a href="project/project.html"> Project </a></li>
             <li><a href="project-proposal/index.html"> Project Proposal </a></li>
+            <li><a href="projectPOC/index.html">Project POC</a></li>
 
         </ul>
     </div>
