--- a/public/projectPOC/index.html
+++ b/public/projectPOC/index.html
@@ -9,6 +9,11 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="views/home/home.controller.js"></script>
+    <script src="views/login/login.controller.js"></script>
+    <script src="views/login-nav/login-nav.controller.js"></script>
+    <script src="views/register/register.controller.js"></script>
+    <script src="views/header/header.controller.js"></script>
+    <script src="views/profile/profile.controller.js"></script>
 
     <meta charset="UTF-8">
     <title>Title</title>
