--- a/public/projectPOC/index.html
+++ b/public/projectPOC/index.html
@@ -14,6 +14,7 @@
     <script src="views/register/register.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
     <script src="views/profile/profile.controller.js"></script>
+    <script src="services/user.service.client.js"></script>
 
     <meta charset="UTF-8">
     <title>Title</title>
