--- a/public/projectPOC/index.html
+++ b/public/projectPOC/index.html
@@ -15,6 +15,7 @@
     <script src="views/header/header.controller.js"></script>
     <script src="views/profile/profile.controller.js"></script>
     <script src="services/user.service.client.js"></script>
+    <script src="views/admin-profile/admin-profile.controller.js"></script>
 
     <meta charset="UTF-8">
     <title>Title</title>
