--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href= "css/index.css">
+    <link rel="stylesheet" type="text/css" href= "assignment/client/css/index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
           crossorigin="anonymous">
@@ -22,7 +22,7 @@
     <div id="nav" class="container-fluid col-xs-4 col-sm-2">
         <ul class="nav nav-sidebar">
 
-           <li><a href="assignment/index.html"> Assignment </a></li>
+           <li><a href="assignment/client/index.html"> Assignment </a></li>
            <li><a href="project/project.html"> Project </a></li>
             <li><a href="project-proposal/index.html"> Project Proposal </a></li>
             <li><a href="projectPOC/index.html">Project POC</a></li>
