--- a/public/projectPOC/index.html
+++ b/public/projectPOC/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="ProjectApp">
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/project.css" rel="stylesheet"/>
+    <link href="../assignment/client/css/project.css" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
