--- a/public/projectPOC/client/index.html
+++ b/public/projectPOC/client/index.html
@@ -26,7 +26,7 @@
 
 <ng-include src="'views/header/header.view.html'"></ng-include>
 
-<div class="container-fluid" style="padding-top: 60px">
+<div class="container-fluid">
     <div ng-view></div>
 </div>
 
